--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="utf-8" />
     <title>残業したくないので、タスク管理はじめました。</title>
     <link data-trunk rel="css" href="styles.css" />
+    <link data-trunk rel="css" href="public/css/zantas.css" />
     <link data-trunk rel="copy-dir" href="public" />
     <link data-trunk rel="rust" data-wasm-opt="z" />
   </head>
